# sdbus-cpp

examples/: CMakeLists.txt
examples/bluez/: bluetooth-client.cpp  bluetooth-client.h  main.cpp
examples/network/: main.cpp  network-client.cpp  network-client.h  org.freedesktop.NetworkManager.xml
examples/org.debian.apt/: aptdaemon-client.cpp  aptdaemon-client.h  main.cpp  org.debian.apt.xml
examples/org.freedesktop.DBus.ObjectManager/: obj-manager-client.cpp
examples/org.freedesktop.Flatpak/: flatpak-client.cpp  flatpak-client.h  freedesktop-flatpak-client-glue.h  main.cpp  org.freedesktop.Flatpak.xml
examples/org.freedesktop.UPower/: main.cpp  upower-client.cpp  upower-client.h
include/sdbus-c++/: StandardInterfaces.h
